feat: Updated customization handling incl. several improvements